style.css
:root {
    --dark-blue: #163338;
}
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
  font-family: 'Poppins', sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.4;
  color: #FFE;
}

body::before {
  content: '';
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: -1;
  background-image: linear-gradient(
    115deg,
    rgba(213, 226, 34, 0.047),
    rgba(242, 246, 146, 0.7)
  ),
  url(./images/ASOIAF-map.jpeg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

@media screen and (min-width: 768px) {
    .container {
        max-width: 720px;
    }
}

form {
    background-color: var(--dark-blue);
    padding: 2rem;
    border-radius: 4px;
}

.form-control {
  display: block;
  width: 100%;
  height: 2.375rem;
  padding: 0.375rem 0.75rem;
  background-clip: padding-box;
  border: 1px solid lightgray;
  border-radius: 0.25rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.form-group {
  margin: 0 auto 1.25rem auto;
  padding: 0.25rem;
}

.header {
  padding: 0.625rem;
  margin-bottom: 1.875rem;
}

.header-text {
  text-align: center;
}
.container {
  width: 100%;
  margin: 3.125rem auto 0 auto;
}

.submit-button {
  display: block;
  width: 100%;
  padding: 0.75rem;
  color: inherit;
  border-radius: 2px;
  cursor: pointer;
}

